# ElectroMagneticField

./: .gitignore  CMakeLists.txt  CudaOpenGL.sln  CudaOpenGL.vcxproj  README.md  kernel.cu
enc_temp_folder/2182be7dc5db36d0c4aef39a7eb3f566/: kernel.cu
exe/: kernel.exp  kernel.lib
libs/: README.md
